2004-03-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: No longer accept --with-g77 (it is still possible
	to use --with-f77=g77).

2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for -mieee instead of -mieee-with-inexact.

2004-02-20  Per Persson  <persquare@mac.com>

	* mkoctfile.in (LINK_DEPS): Include $LDFLAGS in the list.

2004-02-18  Per Persson  <persquare@mac.com>

	* configure.in (*-*-darwin*): Define SONAME_FLAGS.

2004-02-16  David Bateman  <dbateman@free.fr>

	* configure.in: Test for the presence of FFTW 3.x and use it in
	preference to FFTW 2.x.  Define HAVE_FFTW3

2004-02-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in (LINK_DEPS): Include $LIBS and $RLD_FLAG.
	Use $OCTAVE_LIBS instead of listing libs individually.

2004-02-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Delete INCLUDE_LINK_DEPS.  Fix help text.
	Always define LINK_DEPS.
	(LINK_DEPS): Also include FLIBS in the list.

	* Makeconf.in (INCLUDE_LINK_DEPS): Don't substitute.
	(do-subst-config-vals): Delete INCLUDE_LINK_DEPS.
	* configure.in (INCLUDE_LINK_DEPS): Delete.

	* mkoctfile (SH_LD, SH_LDFLAGS): Delete.
	(DL_LD, DL_LDFLAGS): New variables.  Use them instead of SH_LD and
	SH_LDFLAGS for creating .oct files.
	Fix help text.

	* configure.in (MKOCTFILE_SH_LDFLAGS): Delete.
	(MKOCTFILE_DL_LDFLAGS): New variable, default to DL_LDFLAGS.

	* Makeconf.in (do-subst-config-vals): Add DL_LD, DL_LDFLAGS, and
	MKOCTFILE_DL_LDFLAGS to the list of substitutions.
	Delete MKOCTFILE_SH_LDFLAGS.

2004-02-14  Per Persson  <persquare@mac.com>

	* configure.in (DL_LD, DL_LDFLAGS): New variables, default to
	SH_LD and SH_LDFLAGS, respectively.
	Define independently for SH_LD and SH_LDFLAGS for *-*-darwin* targets.
	* Makeconf.in (DL_LD, DL_LDFLAGS): Substitute them here.

2004-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (header-msg): Required bison version now 1.31 or later.
